--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-testtestestes
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- head definitions go here -->
+    </head>
+    <body>
+        <!-- the content goes here -->
+    </body>
+</html>
